# crypto-pair-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: architecture.md  event_contracts.md  historical_dataset.md  index.md  recovery_protocol.md  risk_limits.md  state_machine.md
migrations/: 001_initial_schema.sql
notebooks/: 01_pair_selection.ipynb  02_kalman_ou.ipynb
project_control/: AGENTS.md  BLOCKERS.md  CURRENT_SPRINT.md  DAILY_LOG.md  DECISIONS.md  HANDOFFS.md  INTERFACES.md  OWNERSHIP.md  PROJECT_STATE.md  RELEASE_CHECKLIST.md  RISKS.md  ROADMAP.md  SPRINT8_UNIVERSE.json  TASK_BOARD.md  TEST_MATRIX.md
reports/: alt_info_funding_divergence_new_oos.md  alt_info_funding_structure_diagnostic.md  alt_info_open_interest_diagnostic.md  alt_info_order_flow_diagnostic.md  alt_info_regime_detection_diagnostic.md  alt_onchain_diagnostic.md  alt_options_vrp_diagnostic.md  alt_range_liquidity_diagnostic.md  alt_vrp_economic_check.md  alt_vrp_timing_dev.md  alt_vrp_tsm_overlay_dev.md  alt_xvenue_funding_diagnostic.md  backtest_executable_v1.md  backtest_statistical.md  basis_carry_characterization.md  basis_cash_carry.md  basis_perp_carry_xexch.md  capacity_analysis.md  cs_momentum_backtest_final.md  cs_reversion_backtest_final.md  deploy_program_status.md  external_data_feasibility_brief.md  fc_basis_diagnostic.md  fc_flow_diagnostic.md  fc_position_sizing_dev.md  fc_short_horizon_diagnostic.md  fc_tsm_cost_stress.md  fc_tsm_funding.md  (+49 more)
(+408 files in other folders)
