[project]
name = "crypto-pair-trading"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "narwhals>=2.22.1",
    "numpy>=2.5.0",
    "packaging>=26.2",
    "pandas>=3.0.4",
    "patsy>=1.0.2",
    "polars>=1.42.0",
    "polars-runtime-32>=1.42.0",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "six>=1.17.0",
    "statsmodels>=0.14.6",
    "threadpoolctl>=3.6.0",
    "tzdata>=2026.2",
    "xgboost>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "PLR2004", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--basetemp=pytest_temp -o cache_dir=pytest_temp/.pytest_cache"
